--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,39 @@
 {
-	"name": "frontend",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.22.0",
-		"clsx": "^2.1.1",
-		"cmdk-sv": "^0.0.18",
-		"lucide-svelte": "^0.476.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwind-merge": "^3.0.2",
-		"tailwind-variants": "^0.3.1",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.0.0",
-		"vaul-svelte": "^0.3.2",
-		"vite": "^6.0.0"
-	},
-	"dependencies": {
-		"@vercel/analytics": "^1.5.0",
-		"mode-watcher": "^0.5.1"
-	}
+    "name": "frontend",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "prepare": "svelte-kit sync || echo ''",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "deploy": "npm run build && npx gh-pages -d build -t true"
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^4.0.0",
+        "@sveltejs/adapter-static": "^3.0.8",
+        "@sveltejs/kit": "^2.16.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "autoprefixer": "^10.4.20",
+        "bits-ui": "^0.22.0",
+        "clsx": "^2.1.1",
+        "cmdk-sv": "^0.0.18",
+        "gh-pages": "^6.3.0",
+        "lucide-svelte": "^0.476.0",
+        "svelte": "^5.0.0",
+        "svelte-check": "^4.0.0",
+        "tailwind-merge": "^3.0.2",
+        "tailwind-variants": "^0.3.1",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.0.0",
+        "vaul-svelte": "^0.3.2",
+        "vite": "^6.0.0"
+    },
+    "dependencies": {
+        "@vercel/analytics": "^1.5.0",
+        "mode-watcher": "^0.5.1"
+    }
 }
