--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,17 +17,17 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.22.0",
+		"bits-ui": "^1.5.3",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
 		"lucide-svelte": "^0.476.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwind-merge": "^3.0.2",
-		"tailwind-variants": "^0.3.1",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
-		"vaul-svelte": "^0.3.2",
+		"vaul-svelte": "^1.0.0-next.7",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
