--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@vercel/analytics": "^1.5.0",
-		"mode-watcher": "^0.5.1"
+		"mode-watcher": "^0.5.1",
+		"monaco-editor": "^0.55.1"
 	}
 }
